--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Studieuniverset</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Hej med dig</h1>
+    <p>Jeg bor i Køge </p>
     
 </body>
 </html>
