--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hej med dig</h1>
-    <p>Jeg bor i Køge </p>
-    
+    <img class="bib" src="/img/logo.png" alt="koegebib">    
 </body>
 </html>
