har tilføjet vertikal navigationsbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img class="bib" src="/img/logo.png" alt="koegebib">    
+    <img class="bib" src="logo.png" alt="koegebib" >    
+
+
+    <nav>
+        <ul>
+            <li><a href="#forside">Forside</a></li>
+            <li><a href="#e-bøger og medier">E-bøger og medier</a></li>
+            <li><a href="#anbefalinger">Anbefalinger</a></li>
+            <li><a href="#Studieunivers">Studieunivers</a></li>
+            <li><a href="#Kalender">Kalender</a></li>
+        </ul>
+    </nav>
+
 </body>
+
 </html>
