har tilføjet vertikal nav

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <img class="bib" src="logo.png" alt="koegebib" >    
 
-
-    <nav>
+ <!-- horisontal navigationsbar-->   
+<div>
+    <nav class="topnav">
         <ul>
             <li><a href="#forside">Forside</a></li>
             <li><a href="#e-bøger og medier">E-bøger og medier</a></li>
@@ -20,6 +21,30 @@
             <li><a href="#Kalender">Kalender</a></li>
         </ul>
     </nav>
+
+</div>
+
+ <!-- vertikal navigationsbar-->   
+
+<div class="sidenav">
+    <h1>Studieunivers</h1>
+    
+    <nav>
+        <ul>
+            <li><a href="#fag">Fag</a></li>
+            <li><a href="#hjælp til opgaver">Hjælp til opgaver</a></li>
+            <li><a href="#Biblioteksvagten">Biblioteksvagten</a></li>
+            <li><a href="#Databaser">Databaser</a></li>
+            <li><a href="#Litteraturlistautomaten">Litteraturlistautomaten</a></li>
+        </ul>
+
+    </nav>
+
+</div>
+
+<footer>
+
+</footer>   
 
 </body>
 
