--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <!-- horisontal navigationsbar-->   
 
 <header class="topnav">
-    <img class="bib" src="/img/logo.png" alt="koegebib" >  
+    <img class="bib" src="./img/logo.png" alt="koegebib" >  
     <nav>
         <ul>
             <li><a href="#">Forside</a></li>
@@ -51,7 +51,7 @@
 <section id="Studieunivers" class="tabcontent">
     <h3>Velkommen til Studieuniverset</h3>
     <br>
-    <img class="lovetolearn" src="forside.jpg" alt="love to learn" width="60%">
+    <img class="lovetolearn" src="./img/forside.jpg" alt="love to learn" width="60%">
 
     <p>Her kan du blandt andet får hjælp til at søge efter litteratur enten blandt fysiskebøger
         eller på vores mange online databaser. </p>
